--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -6,23 +6,23 @@
 <nav class="space-y-1">
     <a asp-page="./Index" id="profile"
        class="@(ManageNavPages.IndexNavClass(ViewContext) == "active"
-           ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
-           : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
+          ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
+          : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
         <svg class="@(ManageNavPages.IndexNavClass(ViewContext) == "active"
-           ? "text-indigo-500 group-hover:text-indigo-500"
-           : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          ? "text-indigo-500 group-hover:text-indigo-500"
+          : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
         </svg>
-        Profile
+        Profil
     </a>
 
     <a asp-page="./Email" id="email"
        class="@(ManageNavPages.EmailNavClass(ViewContext) == "active"
-           ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
-           : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
+          ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
+          : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
         <svg class="@(ManageNavPages.EmailNavClass(ViewContext) == "active"
-           ? "text-indigo-500 group-hover:text-indigo-500"
-           : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          ? "text-indigo-500 group-hover:text-indigo-500"
+          : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
         </svg>
         Email
@@ -30,40 +30,40 @@
 
     <a asp-page="./ChangePassword" id="change-password"
        class="@(ManageNavPages.ChangePasswordNavClass(ViewContext) == "active"
-           ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
-           : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
+          ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
+          : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
         <svg class="@(ManageNavPages.ChangePasswordNavClass(ViewContext) == "active"
-           ? "text-indigo-500 group-hover:text-indigo-500"
-           : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          ? "text-indigo-500 group-hover:text-indigo-500"
+          : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z" />
         </svg>
-        Password
+        Lozinka
     </a>
 
     @if (hasExternalLogins)
     {
         <a asp-page="./ExternalLogins" id="external-logins"
            class="@(ManageNavPages.ExternalLoginsNavClass(ViewContext) == "active"
-               ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
-               : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
+              ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
+              : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
             <svg class="@(ManageNavPages.ExternalLoginsNavClass(ViewContext) == "active"
-               ? "text-indigo-500 group-hover:text-indigo-500"
-               : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              ? "text-indigo-500 group-hover:text-indigo-500"
+              : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1" />
             </svg>
-            External logins
+            Spoljne prijave
         </a>
     }
 
     <a asp-page="./PersonalData" id="personal-data"
        class="@(ManageNavPages.PersonalDataNavClass(ViewContext) == "active"
-           ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
-           : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
+          ? "bg-indigo-50 border-indigo-500 text-indigo-700 hover:bg-indigo-50 hover:text-indigo-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium"
+          : "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium")">
         <svg class="@(ManageNavPages.PersonalDataNavClass(ViewContext) == "active"
-           ? "text-indigo-500 group-hover:text-indigo-500"
-           : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          ? "text-indigo-500 group-hover:text-indigo-500"
+          : "text-gray-400 group-hover:text-gray-500") mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 10h16M4 14h16M4 18h16" />
         </svg>
-        Personal data
+        Lični podaci
     </a>
 </nav>
