--- a/RapidRecruit/Areas/Identity/Pages/_ValidationScriptsPartial.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,24 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script>
+    $.extend($.validator.messages, {
+        required: "Ovo polje je obavezno.",
+        remote: "Popravite ovo polje.",
+        email: "Unesite ispravnu email adresu.",
+        url: "Unesite ispravan URL.",
+        date: "Unesite ispravan datum.",
+        dateISO: "Unesite ispravan datum (ISO).",
+        number: "Unesite ispravan broj.",
+        digits: "Unesite samo cifre.",
+        creditcard: "Unesite ispravan broj kreditne kartice.",
+        equalTo: "Unesite istu vrednost ponovo.",
+        extension: "Unesite vrednost sa ispravnom ekstenzijom.",
+        maxlength: $.validator.format("Ne možete uneti više od {0} karaktera."),
+        minlength: $.validator.format("Morate uneti najmanje {0} karaktera."),
+        rangelength: $.validator.format("Unesite vrednost dužine između {0} i {1} karaktera."),
+        range: $.validator.format("Unesite vrednost između {0} i {1}."),
+        max: $.validator.format("Unesite vrednost manju ili jednaku {0}."),
+        min: $.validator.format("Unesite vrednost veću ili jednaku {0}."),
+        step: $.validator.format("Unesite vrednost koja je umnožak broja {0}.")
+    });
+</script>
