--- a/RapidRecruit/Views/JobPostings/Index.cshtml
+++ b/RapidRecruit/Views/JobPostings/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@model IEnumerable<RapidRecruit.Models.JobPosting>
 @{
-    ViewData["Title"] = "Job Postings";
+    ViewData["Title"] = "Oglasi za Posao";
 }
 
 <div class="px-4 sm:px-6 lg:px-8">
     <div class="sm:flex sm:items-center">
         <div class="sm:flex-auto">
-            <h1 class="text-3xl font-semibold text-gray-900">Job Postings</h1>
+            <h1 class="text-3xl font-semibold text-gray-900">Oglasi za Posao</h1>
         </div>
         <div class="mt-4 sm:ml-16 sm:mt-0">
             <a asp-action="Create" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                Create New Job
+                Kreiraj Novi Oglas
             </a>
         </div>
     </div>
@@ -23,31 +23,31 @@
                         <thead class="bg-gray-50">
                             <tr>
                                 <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.Title)
+                                    Naslov
                                 </th>
                                 <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900">
-                                    Number of applications
+                                    Broj prijava
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.Description)
+                                    Opis
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.MinimumSalary)
+                                    Minimalna Plata
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.MaximumSalary)
+                                    Maksimalna Plata
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.Location)
+                                    Lokacija
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.EndDate)
+                                    Datum Isteka
                                 </th>
                                 <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">
-                                    @Html.DisplayNameFor(model => model.CreatedAt)
+                                    Datum Kreiranja
                                 </th>
                                 <th scope="col" class="relative py-3.5 pl-3 pr-4">
-                                    <span class="sr-only">Actions</span>
+                                    <span class="sr-only">Akcije</span>
                                 </th>
                             </tr>
                         </thead>
@@ -80,11 +80,11 @@
                                         @Html.DisplayFor(modelItem => item.CreatedAt)
                                     </td>
                                     <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium">
-                                        <a asp-action="Edit" asp-route-id="@item.Id" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="text-indigo-600 hover:text-indigo-900">Izmeni</a>
                                         <span class="mx-2 text-gray-300">|</span>
-                                        <a asp-action="Details" asp-route-id="@item.Id" class="text-indigo-600 hover:text-indigo-900">Details</a>
+                                        <a asp-action="Details" asp-route-id="@item.Id" class="text-indigo-600 hover:text-indigo-900">Detalji</a>
                                         <span class="mx-2 text-gray-300">|</span>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="text-red-600 hover:text-red-900">Delete</a>
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="text-red-600 hover:text-red-900">Obriši</a>
                                     </td>
                                 </tr>
                             }
