--- a/RapidRecruit/Views/Shared/_LoginPartial.cshtml
+++ b/RapidRecruit/Views/Shared/_LoginPartial.cshtml
@@ -7,21 +7,21 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li>
-            <a id="manage" class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" asp-area="Identity" asp-page="/Account/Manage/Index" title="Upravljanje">Zdravo @UserManager.GetUserName(User)!</a>
         </li>
         <li>
             <form id="logoutForm" class="inline-flex" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="px-4 py-2 text-gray-900 hover:text-gray-700 bg-transparent border-none cursor-pointer">Logout</button>
+                <button id="logout" type="submit" class="px-4 py-2 text-gray-900 hover:text-gray-700 bg-transparent border-none cursor-pointer">Odjava</button>
             </form>
         </li>
     }
     else
     {
         <li>
-            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="register" asp-area="Identity" asp-page="/Account/Register">Registracija</a>
         </li>
         <li>
-            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="inline-block px-4 py-2 text-gray-900 hover:text-gray-700" id="login" asp-area="Identity" asp-page="/Account/Login">Prijava</a>
         </li>
     }
 </ul>
