truncate job posting description on index

--- a/RapidRecruit/Views/JobPostings/Index.cshtml
+++ b/RapidRecruit/Views/JobPostings/Index.cshtml
@@ -61,7 +61,7 @@
                                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
                                         @Html.DisplayFor(modelItem => item.JobApplications.Count)
                                     </td>
-                                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                                    <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 max-w-xs truncate">
                                         @Html.DisplayFor(modelItem => item.Description)
                                     </td>
                                     <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
